crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__source__test__test_add_family_system_requirement_environment_pixi.toml.snap
---
source: crates/pixi_manifest/src/manifests/source.rs
expression: source.to_string()
snapshot_kind: text
---
[project]
name = "test"
channels = []
platforms = []

[system-requirements]
libc = { family = "glibc", version = "1.2" }
