crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__source__test__test_add_full_system_requirement_environment_pyproject.toml.snap
---
source: crates/pixi_manifest/src/manifests/source.rs
expression: source.to_string()
---
[project]
name = "test"
[tool.pixi.workspace]
channels = []
platforms = []

[tool.pixi.system-requirements]
linux = "4.18"
cuda = "11.1"
macos = "13.0"
libc = "2.28"
archspec = "x86_64"
